--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -731,7 +731,7 @@
 \MSIMathQuote{lvertneqq}
 \MSIMathQuote{maltese}
 \MSIMathQuote{mapsto}
-%\MSIMathQuote{mathstrut}
+\MSIMathQuote{mathstrut}
 \MSIMathQuote{max}
 \MSIMathQuote{measuredangle}
 \MSIMathQuote{mho}
