Changes to put preferred document directory in the prefs dialog

--- a/prince/base/locale/en-us/dialogs/msiDialogs.properties
+++ b/prince/base/locale/en-us/dialogs/msiDialogs.properties
@@ -26,6 +26,7 @@ dlgErrors.bibmarkerInUse=The bibliography key %bibmarkerString% is in use in thi
 filePicker.selectBibDBDir=Select BibTeX Database Directory
 filePicker.selectBibStyleDir=Select BibTeX Styles Directory
 filePicker.selectBibTeXExe=Select BibTeX Program
+filePicker.selectDir=Select Directory
 
 # strings used in ImageProperties dialog
 imageProps.importErrorTitle=Error importing image file
