--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -238,7 +238,7 @@
 
 
 \msi@everycellstart{%
-   \msiclosetag{td}{</td>}%
+   %\msiclosetag{td}{</td>}%
    \msiopentag{td}{<td>}%
    \ifmmode\else\msiopentag{bodyText}{<bodyText>}\fi}
 
