3519. Improve spacing. There may be a limit to what we can do here.

--- a/filters/ptprince/ptdata/msi-xmlout.tex
+++ b/filters/ptprince/ptdata/msi-xmlout.tex
@@ -1545,7 +1545,8 @@
 
 \def\hrulefill{%
    \ifmmode
-     \string\hrulefill
+     %\string\hrulefill
+     \msitag{\msipassthru{<mspace width="thickmathspace" type="customSpace" class="stretchySpace" flex="3" fillWith="line" atEnd="true"/>}}%
    \else
      <hspace fillWith="line" flex="1" class="stretchySpace" type="stretchySpace"></hspace>
    \fi}
