Fix 3706. But see note in bug report.

--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -84,7 +84,7 @@
 \MSISimpleEnvironment{tabbing}
 \MSIEmptyElement[tab-gt]{>}{}%  these are used in tabbing environnment
 \MSIEmptyElement[tab-plus]{+}{}
-\MSIEmptyElement[tab-eq]{=}{}
+%\MSIEmptyElement[tab-eq]{=}{}
 
 
 \MSISimpleEnvironment{proof}
