--- a/filters/ptprince/ptdata/msi-latex-default.tex
+++ b/filters/ptprince/ptdata/msi-latex-default.tex
@@ -629,6 +629,7 @@
 \MSIMathQuote{gcd}
 \MSIMathQuote{geqq}
 \MSIMathQuote{geqslant}
+\MSIMathQuote{ge}
 \MSIMathQuote{geq}
 \MSIMathQuote{ggg}
 \MSIMathQuote{gg}
@@ -675,6 +676,7 @@
 \MSIMathQuote{langle}
 \MSIMathQuote{lceil}
 \MSIMathQuote{lcm}
+\MSIMathQuote{le}
 \MSIMathQuote{leadsto}
 \MSIMathQuote{leftarrowtail}
 \MSIMathQuote{Leftarrow}
@@ -744,6 +746,7 @@
 \MSIMathQuote{nabla}
 \MSIMathQuote{natural}
 \MSIMathQuote{ncong}
+\MSIMathQuote{ne}
 \MSIMathQuote{nearrow}
 \MSIMathQuote{neq}
 \MSIMathQuote{nexists}
@@ -932,6 +935,7 @@
 \MSIMathQuote{tiint}
 \MSIMathQuote{times}
 \MSIMathQuote{tint}
+\MSIMathQuote{to}
 \MSIMathQuote{toint}
 \MSIMathQuote{top}
 \MSIMathQuote{tprod}
