--- a/prince/base/locale/en-us/menuOverlay.dtd
+++ b/prince/base/locale/en-us/menuOverlay.dtd
@@ -148,6 +148,8 @@
 <!ENTITY viewShowHideMenu.accesskey "S" >
 <!ENTITY viewTeXLog.accesskey "L" >
 <!ENTITY viewTeXLog.label "TeX Log" >
+<!ENTITY viewTeXErrors.accesskey "E" >
+<!ENTITY viewTeXErrors.label "TeX Errors" >
 <!ENTITY viewBibTeXLog.accesskey "B" >
 <!ENTITY viewBibTeXLog.label "BibTeX Log" >
 <!ENTITY viewTeXFile.accesskey "F" >
