Work on tables and graphics in math

--- a/filters/ptprince/ptdata/msi-tcilatex.tex
+++ b/filters/ptprince/ptdata/msi-tcilatex.tex
@@ -359,7 +359,8 @@
    \msitag{/>}
 }
 
-\def\FRAME{\msihmode\begingroup
+\def\FRAME{\begingroup
+             \msihmode
              \catcode`\&=13
              \catcode`\~=11\relax\@FRAME}
 
